# DarkRoom_fpga

./: .gitignore  .gitmodules  CMakeLists.txt  CleanMe  ConcatenateSensorValues.bsf  ConcatenateSensorValues.v  ConcatenateSensorValues.v.bak  Counter.bsf  Counter.v  Counter.v.bak  Counter2_VHDL.bsf  DarkRoomControl.bsf  DarkRoomControl.v  DarkRoomControl.v.bak  LCD.bsf  LCD.vhd  LCD.vhd.bak  Makefile  STD_FIFO.bsf  SpiControl.bsf  SpiControl.v  SpiControl.v.bak  counter.bsf  counter.vhd  counter.vhd.bak  darkroom.qpf  darkroom_top.bdf  darkroom_top.dpf  darkroom_top.ipregen.rpt  darkroom_top.qsf  darkroom_top.qsf.bak  darkroom_top.qws  darkroom_top_assignment_defaults.qdf  darkroom_top_nativelink_simulation.rpt  decoder.vhd  decoder.vhd.bak  edge_timer.bsf  edge_timer.vhd.bak  fifo.bsf  fifo.qip  (+56 more)
cmake/: findncurses_arm.cmake  findros.cmake
db/: .cmp.kpt  .ipregen.qmsg  a_dpfifo_0r31.tdf  a_dpfifo_1o31.tdf  a_dpfifo_3r31.tdf  a_dpfifo_7s31.tdf  a_dpfifo_tt31.tdf  a_dpfifo_vq31.tdf  a_fefifo_66f.tdf  a_fefifo_s7f.tdf  abs_divider_1dg.tdf  abs_divider_2dg.tdf  abs_divider_3dg.tdf  abs_divider_4dg.tdf  abs_divider_5dg.tdf  abs_divider_6dg.tdf  abs_divider_8dg.tdf  abs_divider_9dg.tdf  abs_divider_kbg.tdf  abs_divider_nbg.tdf  abs_divider_pbg.tdf  add_sub_7pc.tdf  add_sub_8pc.tdf  add_sub_efh.tdf  add_sub_ifh.tdf  add_sub_unc.tdf  add_sub_vnc.tdf  alt_u_div_19f.tdf  alt_u_div_36f.tdf  alt_u_div_59f.tdf  alt_u_div_6af.tdf  alt_u_div_76f.tdf  alt_u_div_79f.tdf  alt_u_div_j8f.tdf  alt_u_div_n8f.tdf  alt_u_div_p8f.tdf  alt_u_div_q8f.tdf  alt_u_div_r8f.tdf  alt_u_div_t5f.tdf  alt_u_div_t8f.tdf  (+414 more)
fpga-rtl/: DarkRoom.map  DarkRoom.v  DarkRoom.v.bak  DarkRoom_hw.tcl  DarkRoom_hw.tcl~  fpgaCAN.map  ghrd.v  hps_0.h  lighthouse.inc  lighthouse.v  lighthouse.v.bak  lighthouse.vhd  lighthouse_sensor.vhd  lighthouse_sensor.vhd.bak  lighthouse_simple.vhd  lighthouse_simple.vhd.bak  oneshot.v  pll.qip  pll.v  soc_system.asm.rpt  soc_system.cdf  soc_system.done  soc_system.fit.rpt  soc_system.fit.summary  soc_system.flow.rpt  soc_system.ipregen.rpt  soc_system.jdi  soc_system.map.rpt  soc_system.map.smsg  soc_system.map.summary  soc_system.pin  soc_system.qsf  soc_system.qsf.bak  soc_system.qsys  soc_system.qws  soc_system.sld  soc_system.sopcinfo  soc_system.swinfo  soc_system_old.qws  test_dr.v  (+3 more)
fpga-rtl-min/: .gitignore  ghrd.v  soc_system.qsf
greybox_tmp/: cbx_args.txt
hps-c/: .cproject  DarkRoom
output_files/: SDC1.sdc  darkroom_top.asm.rpt  darkroom_top.cdf  darkroom_top.done  darkroom_top.eda.rpt  darkroom_top.fit.rpt  (+14 more)
(+2005 files in other folders)
